# hcaptcha-rs

./: .fossa.yml  .gitignore  .gitpod.yml  .travis.yaml  .travis.yml  ARCHITECTURE.md  BADGE_CHECKLIST.md  BADGE_UPDATE_GUIDE.md  CHANGELOG.md  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FUNDING.yml  GOVERNANCE.md  LICENSE  LICENSE-MIT  PRLOG.md  README.md  ROADMAP.md  SECURITY.md  THIRD-PARTY-LICENSES.md  cliff.toml  deny.toml  release.toml  renovate.json  sonar-project.properties
.circleci/: audit.yml  audit.yml.backup  config.yml  github_release.yml  release.yml  success.yml  update_prlog.yml  validation.yml  wasm_nightly_canary.yml
.github/: CODEOWNERS  (+1 more)
.reuse/: dep5
crates/hcaptcha/fuzz/: Cargo.toml
crates/hcaptcha/fuzz/fuzz_targets/: response_parse.rs
crates/test-suite-no-default/: Cargo.toml
crates/test-suite-no-default/tests/ui/compilefail/: not_a_struct.stderr
crates/test-suite-trace/: Cargo.toml
fuzz/: Cargo.toml
hcaptcha/: Cargo.toml  release-hook.sh  release.toml
hcaptcha-cli/: Cargo.toml
hcaptcha-cli/src/: cli.rs  main.rs
hcaptcha-cli/tests/: cmd.rs
hcaptcha/examples/custom_contact_lambda/: README.md  handler.rs  main.rs
hcaptcha/examples/custom_contact_lambda/handler/: error.rs  hcaptcha_validate.rs  record.rs  send.rs  validate.rs
hcaptcha/examples/derived_contact_lambda/: README.md  handler.rs  main.rs
hcaptcha/examples/derived_contact_lambda/handler/: error.rs  param.rs  record.rs  send.rs
hcaptcha/examples/hcaptcha-wasm/: Cargo.toml  README.md
hcaptcha/examples/hcaptcha-wasm/.github/: dependabot.yml
hcaptcha/examples/hcaptcha-wasm/tests/: web.rs
hcaptcha/src/: captcha.rs  client.rs  domain.rs  error.rs  hcaptcha.rs  hcaptcha_captcha.rs  hcaptcha_client.rs  hcaptcha_error.rs  hcaptcha_request.rs  hcaptcha_response.rs  lib.rs  request.rs  response.rs
hcaptcha/src/client/: form.rs
hcaptcha/src/domain/: client_response.rs  hcaptcha_client_response.rs  hcaptcha_remoteip.rs  hcaptcha_secret.rs  hcaptcha_secret_ext.rs  hcaptcha_sitekey.rs  remoteip.rs  secret.rs  secret_ext.rs  sitekey.rs
hcaptcha_derive/: Cargo.toml  release-hook.sh  release.toml
hcaptcha_derive/src/: lib.rs
hcaptcha_derive/tests/: tests.rs
hcaptcha_derive/tests/compile_fail/: complete_enum.rs  complete_enum.stderr  no_field_enum.rs  no_field_enum.stderr  no_field_struct.rs  no_field_struct.stderr
hcaptcha_derive/tests/expand/: complete_struct.expanded.rs  complete_struct.rs
lambda-contact/: .gitignore  Cargo.toml  build.sh  test-event.json  test.sh
lambda-contact/iac-lambda/: .terraform.lock.hcl  deploy.sh  main.tf  outputs.tf  variables.tf  versions.tf
lambda-contact/iac-setup-ses/: .terraform.lock.hcl  deploy.sh  main.tf  variables.tf  versions.tf
lambda-contact/src/: handler.rs  main.rs
lambda-contact/src/handler/: contact_form.rs  dynamo_items.rs  error.rs  param.rs  record.rs  send.rs  validate.rs
mock-verifier/: Cargo.toml
mock-verifier/src/: hcaptcha_integration.rs  main.rs  tc001_blank_sitekey.rs
src/: lib.rs  (+12 more)
test-suite-default/: Cargo.toml
test-suite-default/tests/ui/pass/: hcaptcha_integration.rs  test_invalid_secret_v1.rs  test_invalid_sitekey.rs  test_simple.rs
test-suite-enterprise/: Cargo.toml
test-suite-enterprise/src/: lib.rs
test-suite-enterprise/tests/ui/pass/: test_complete_error_response.rs  test_complete_success_response.rs  test_hcaptcha_integration_enterprise_bot.rs  test_invalid_sitekey.rs
test-suite-native-only/: Cargo.toml
test-suite-native-only/tests/ui/pass/: test_blank_sitekey.rs  test_complete_error_response.rs  test_invalid_remoteip.rs  test_invalid_token.rs
test-suite-no-default/: Cargo.toml
test-suite-no-default/tests/ui/pass/: hcaptcha_integration.rs  test_complete_success_response.rs  test_hcaptcha_integration_publisher.rs  test_invalid_sitekey.rs  test_simple.rs  test_with_remoteip.rs
test-suite-rustls-only/: Cargo.toml
test-suite-rustls-only/tests/: compiletest.rs
test-suite-rustls-only/tests/ui/compilefail/: captcha_not_identified.rs  captcha_not_identified.stderr  not_a_struct.stderr
test-suite-rustls-only/tests/ui/pass/: helper.rs  test_hcaptcha_integration_enterprise_safe.rs  test_hcaptcha_integration_publisher.rs  test_invalid_token.rs  test_with_remoteip.rs  test_with_sitekey.rs
test-suite-trace/: Cargo.toml
test-suite-trace/tests/ui/pass/: hcaptcha_integration.rs  test_invalid_remoteip.rs  test_invalid_secret_v1.rs  test_invalid_secret_v2.rs  test_with_sitekey.rs
test-wasm/: Cargo.toml  README.md
test-wasm/src/: lib.rs
test-wasm/tests/: web.rs
test_suite/: Cargo.toml
test_suite/tests/: compiletest.rs
test_suite/tests/ui/: helper.rs  simple.rs
test_suite/tests/ui/compilefail/: captcha_not_identified.stderr  not_a_struct.stderr
test_suite/tests/ui/pass/: helper.rs  test_blank_sitekey.rs  test_complete_error_response.rs  test_complete_success_response.rs  test_invalid_remoteip.rs  test_invalid_secret.rs  test_invalid_sitekey.rs  test_invalid_token.rs  test_simple.rs  test_with_remoteip.rs  test_with_sitekey.rs
test_suite_default/: Cargo.toml
test_suite_default/tests/ui/compilefail/: captcha_not_identified.rs
test_suite_default/tests/ui/pass/: hcaptcha_integration.rs  test_blank_sitekey.rs  test_complete_error_response.rs  test_complete_success_response.rs  test_hcaptcha_integration_publisher.rs  test_invalid_remoteip.rs  test_invalid_secret_v1.rs  test_invalid_secret_v2.rs  test_invalid_sitekey.rs  test_invalid_token.rs  test_simple.rs  test_with_remoteip.rs  test_with_sitekey.rs
test_suite_native_only/: Cargo.toml
test_suite_native_only/tests/ui/compilefail/: captcha_not_identified.stderr
test_suite_no_default/: Cargo.toml
test_suite_no_default/tests/ui/compilefail/: not_a_struct.rs
test_suite_no_default/tests/ui/pass/: hcaptcha_integration.rs  test_blank_sitekey.rs  test_simple.rs
test_suite_rustls_only/: Cargo.toml
test_suite_rustls_only/tests/ui/pass/: test_hcaptcha_integration_enterprise_safe.rs
test_suite_trace/: Cargo.toml
test_suite_trace/tests/ui/pass/: test_invalid_secret_v1.rs  test_invalid_sitekey.rs
(+112 files in other folders)
