# SPDX-FileCopyrightText: 2022 jerusdp
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[workspace]
resolver = "2"
members = [
    "crates/hcaptcha",
    "crates/hcaptcha-cli",
    "crates/hcaptcha_derive",
    "crates/test-suite-default",
    "crates/test-suite-enterprise",
    "crates/test-suite-native-only",
    "crates/test-suite-no-default",
    "crates/test-suite-rustls-only",
    "crates/test-suite-trace",
    "crates/test-suite-cli",
    "crates/mock-verifier",
    "crates/test-wasm",
    "crates/hcaptcha/examples/hcaptcha-wasm",
]
exclude = ["crates/hcaptcha/fuzz"]

[workspace.package]
rust-version = "1.88"
edition = "2021"
publish = false

[workspace.dependencies]
async-trait = "0.1.89"
chrono = "0.4.43"
claims = "0.8.0"
clap = "4.5.58"
clap-verbosity-flag = "3.0.4"
color-eyre = "0.6.5"
env_logger = "0.11.8"
hex = "0.4.3"
itertools = "0.14.0"
lambda_runtime = "1.0.2"
log = "0.4.29"
macrotest = "1.2.0"
mockd = { version = "0.4.56", features = ["internet", "unique", "words"] }
proc-macro2 = "1.0.106"
proc-macro-error2 = "2.0.1"
quote = "1.0.44"
rand = "0.9.2"
reqwest = { version = "0.12.28", default-features = false, features = [
    "json",
    "http2",
] }
rocket = { version = "0.5.1", features = ["json"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
serde = { version = "1.0.228", features = ["derive"] }
simple_logger = "5.1.0"
syn = { version = "2.0.115", features = ["extra-traits"] }
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["rt", "macros"] }
tracing = { version = "0.1.44", features = ["log", "attributes"] }
tracing-appender = "0.2.4"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-test = "0.2.5"
wiremock = "0.6.5"
trybuild = "1.0.114"
uuid = { version = "1.19.0", features = ["v4"] }
url = "2.5.8"
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
wasm-bindgen-test = "0.3.56"

[workspace.lints.clippy]
# Allow pedantic lints by default - they are informational, not errors
pedantic = "allow"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
