# SPDX-FileCopyrightText: 2025 jerusdp
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "hcaptcha-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
hcaptcha = { path = "../hcaptcha" }

[[bin]]
name = "response_parse"
path = "fuzz_targets/response_parse.rs"
test = false
doc = false
bench = false