[package]
name = "hcaptcha-cli"
version = "0.2.0"
edition = "2021"
publish = false
rust-version = "1.75"

[dependencies]
clap = "4.5.17"
clap-verbosity-flag = "2.2.1"
color-eyre = "0.6.3"
hcaptcha = { path = "../hcaptcha", features = ["enterprise"] }

[target.x86_64-unknown-linux-gnu.dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }

[target.wasm32-wasip1.dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt"] }

[target.wasm32-wasi.dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt"] }
