[package]
name = "hcaptcha-cli"
version = "0.2.0"
edition = "2021"
publish = false
rust-version = "1.75"

[dependencies]
clap.workspace = true
clap-verbosity-flag.workspace = true
color-eyre.workspace = true
hcaptcha = { path = "../hcaptcha", features = ["enterprise"] }
serde_json.workspace = true

[target.x86_64-unknown-linux-gnu.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }

[target.wasm32-wasip1.dependencies]
tokio.workspace = true

[target.wasm32-wasi.dependencies]
tokio.workspace = true
