[package]
name = "hcaptcha-cli"
version = "3.0.4"
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
clap-verbosity-flag.workspace = true
color-eyre.workspace = true
hcaptcha = { path = "../hcaptcha", features = ["enterprise"] }

[target.x86_64-unknown-linux-gnu.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }

[target.wasm32-wasip1.dependencies]
tokio.workspace = true

[target.wasm32-wasi.dependencies]
tokio.workspace = true
