[package]
name = "hcaptcha"
description = """
hCaptcha client response verification. Validate the hCaptcha response submitted from to your server from the client.
"""
version = "2.1.1"
authors = ["Jeremiah Russell <jrussell@jerus.ie>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jerusdp/hcaptcha-rs"
edition = "2018"
readme = "README.md"
documentation = "https://docs.rs/hcaptcha"
categories = ["web-programming"]
keywords = ["hcaptcha", "captcha", "security", "backend", "protection"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "CHANGES.md",
]

[features]
default = ["ext", "nativetls-backend"]
rustsl-backend = ["reqwest/rustls-tls"]
nativetls-backend = ["reqwest/native-tls"]
ext = ["hex"]
enterprise = []
trace = ["tracing"]
nightly = []

[dependencies]
async-trait = "0.1"
hex = { version = "0.4", optional = true }
reqwest = { version = "0.11.12",default-features=false, features = ["json"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = { version = "0.1.37", features = [
    "log",
    "attributes",
], optional = true }
uuid = { version = "1.2.1", features = ["v4"] }
url = "2.3.1"
hcaptcha_derive = { version = "2.0.0", path = "../hcaptcha_derive" }

[dev-dependencies]
chrono = "0.4.23"
claims = "0.7.1"
mockd = { version = "0.4.0", features = ["internet", "unique", "words"] }
hex = "0.4"
itertools = "0.10.5"
lambda_runtime = "0.7.1"
log = "0.4.17"
rand = "0.8.5"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
simple_logger = "4.0"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-test = "0.2.3"
rusoto_core = { version = "0.48.0", default_features = false, features = [
    "rustls",
] }
rusoto_ses = { version = "0.48.0", default_features = false, features = [
    "rustls",
] }
wiremock = "0.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
