[package]
name = "hcaptcha"
description = """
hCaptcha client response verification. Validate the hCaptcha response submitted from to your server from the client.
"""
version = "2.4.9"
authors = ["Jeremiah Russell <jrussell@jerus.ie>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jerusdp/hcaptcha-rs"
edition = "2018"
rust-version = "1.75"
readme = "README.md"
documentation = "https://docs.rs/hcaptcha"
categories = ["web-programming"]
keywords = ["hcaptcha", "captcha", "security", "backend", "protection"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "CHANGES.md",
]

[features]
default = ["ext", "nativetls-backend"]
rustls-backend = ["reqwest/rustls-tls"]
nativetls-backend = ["reqwest/native-tls"]
ext = ["hex"]
enterprise = []
trace = ["tracing"]
nightly = []

[dependencies]
async-trait = "0.1.82"
hex = { version = "0.4.3", optional = true }
hcaptcha_derive = { version = "2.4.9", path = "../hcaptcha_derive" }
reqwest = { version = "0.12.4", default-features = false, features = [
    "json",
    "http2",
] }
serde_json = "1.0"
serde_urlencoded = "0.7"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.59"
tracing = { version = "0.1.40", features = [
    "log",
    "attributes",
], optional = true }
uuid = { version = "1.8.0", features = ["v4"] }
url = "2.5.0"

[dev-dependencies]
chrono = "0.4.38"
claims = "0.7.1"
mockd = { version = "0.4.3", features = ["internet", "unique", "words"] }
hex = "0.4.3"
itertools = "0.13.0"
lambda_runtime = "0.13.0"
log = "0.4.21"
rand = "0.8.5"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
simple_logger = "5.0.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-test = "0.2.4"
wiremock = "0.6"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
