[package]
name = "hcaptcha_derive"
version = "0.1.0"
edition = "2018"

[lib]
name= "hcaptcha_derive"
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1"

[dev-dependencies]
hcaptcha = {path = "../hcaptcha" }