[package]
name = "hcaptcha_derive"
version = "2.7.3"
edition = "2018"
description = """
Derive macro for hCaptcha. Please use hcaptcha crate.
"""
authors = ["Jeremiah Russell <jrussell@jerus.ie>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jerusdp/hcaptcha-rs"
readme = "README.md"
documentation = "https://docs.rs/hcaptcha_derive"
categories = ["web-programming"]
keywords = ["hcaptcha", "captcha", "security", "backend", "protection"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "CHANGES.md",
]

[lib]
name = "hcaptcha_derive"
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
proc-macro-error2.workspace = true

[dev-dependencies]
hcaptcha = { path = "../hcaptcha" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
