[package]
name = "contact"
version = "0.4.0"
authors = ["Jeremiah Russell <jrussell@jerus.ie>"]
edition = "2018"
autobins = false
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4.1"
serde = "^1"
serde_json = "^1"
serde_urlencoded = "0.7.1"
serde_derive = "^1"
tracing = { version = "0.1.32", features = ["attributes"] }
tracing-appender = "0.2.2"
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
chrono = "0.4.19"
rusoto_core = {version = "0.47.0", default_features = false, features=["rustls"]}
rusoto_ses = {version = "0.47.0", default_features = false, features=["rustls"]}
rusoto_ssm = {version = "0.47.0", default_features = false, features=["rustls"]}
rusoto_dynamodb = {version = "0.47.0", default_features = false, features=["rustls"]}
tokio = { version = "1.17.0", features = [ "rt-multi-thread", "macros" ] }
hcaptcha = {path = "../hcaptcha", features = ["trace"] }
# hcaptcha = "0.3"
uuid = {version = "~0.8", features = ["v4"] }
futures = "0.3.21"
regex = "1.5"
thiserror = "1.0"
url = "2.2.2"

[[bin]]
name = "bootstrap"
path = "src/main.rs"