[package]
name = "mock-verifier"
version = "3.0.16"
rust-version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
rocket.workspace = true
serde.workspace = true
serde_json.workspace = true
hcaptcha = { path = "../hcaptcha", features = ["enterprise"] }
serde_urlencoded.workspace = true
