[package]
name = "test-suite-no-default"
version = "3.0.21"
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
trace = []

[dependencies]

[dev-dependencies]
chrono.workspace = true
claims.workspace = true
env_logger.workspace = true
hcaptcha = { path = "../hcaptcha", default-features = false }
hcaptcha_derive = { path = "../hcaptcha_derive" }
hex.workspace = true
itertools.workspace = true
mockd.workspace = true
rand.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
trybuild.workspace = true
wiremock.workspace = true
