[package]
name = "test-suite-rustls-only"
version = "3.0.21"
edition = "2021"
publish = false
rust-version = "1.75"

[features]
trace = []

[dependencies]

[dev-dependencies]
chrono.workspace = true
claims.workspace = true
env_logger.workspace = true
hcaptcha = { path = "../hcaptcha", default-features = false, features = [
    "rustls-backend",
] }
hcaptcha_derive = { path = "../hcaptcha_derive" }
hex.workspace = true
itertools.workspace = true
mockd.workspace = true
rand.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
trybuild.workspace = true
wiremock.workspace = true
