[package]
name = "test-wasm"
version = "0.2.2"
authors = ["Jeremiah Russell <jerry@jrussell.ie>"]
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
claims.workspace = true
hcaptcha = { path = "../hcaptcha", features = ["enterprise"] }
hcaptcha_derive = { path = "../hcaptcha_derive" }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
