[package]
name = "test_suite"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
# hcaptcha = { path = "../hcaptcha" }
# hcaptcha_derive = { path = "../hcaptcha_derive"}

[dev-dependencies]
trybuild = "1.0"
hcaptcha = { path = "../hcaptcha" }
hcaptcha_derive = { path = "../hcaptcha_derive" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
claim = "0.5.0"
fakeit = "1.1.1"
itertools = "0.10.1"
rand = "0.8"
wiremock = "0.5.10"
serde_json = "1"
hex = "0.4"
chrono = "0.4.19"
env_logger = "0.9.0"
