[package]
name = "test_suite_default"
version = "0.5.0"
edition = "2021"
publish = false
rust-version = "1.75"

[features]
# default = ["ext", "nativetls-backend"]
# rustls-backend = ["reqwest/rustls-tls"]
# nativetls-backend = ["reqwest/native-tls"]
# ext = ["hex"]
# enterprise = []
trace = []
# nightly = []


[dependencies]
# hcaptcha = { path = "../hcaptcha" }
# hcaptcha_derive = { path = "../hcaptcha_derive"}

[dev-dependencies]
trybuild.workplace = true
hcaptcha = { path = "../hcaptcha" }
hcaptcha_derive = { path = "../hcaptcha_derive" }
tokio = { wworkplace = true, features = ["rt-multi-thread"] }
claims.workplace = true
mockd.workplace = true
itertools.workplace = true
rand.workplace = true
wiremock.workplace = true
serde_json.workplace = true
hex.workplace = true
chrono.workplace = true
env_logger.workplace = true
