[package]
name = "test_suite_rustls_only"
version = "0.5.0"
edition = "2021"
publish = false
rust-version = "1.75"

[dependencies]
# hcaptcha = { path = "../hcaptcha" }
# hcaptcha_derive = { path = "../hcaptcha_derive"}

[dev-dependencies]
trybuild = "1.0.99"
hcaptcha = { path = "../hcaptcha", default-features = false, features = [
    "rustls-backend",
] }
hcaptcha_derive = { path = "../hcaptcha_derive" }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
claims = "0.7.1"
mockd = { version = "0.4.19", features = ["internet", "unique"] }
itertools = "0.13.0"
rand = "0.8.5"
wiremock = "0.6.2"
serde_json = "1.0.128"
hex = "0.4.3"
chrono = "0.4.38"
env_logger = "0.11.5"
