[package]
name = "test_suite_trace"
version = "0.5.0"
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
trace = []

[dependencies]

[dev-dependencies]
chrono.workspace = true
claims.workspace = true
env_logger.workspace = true
hcaptcha = { path = "../hcaptcha", features = ["trace", "enterprise"] }
hcaptcha_derive = { path = "../hcaptcha_derive" }
tokio = { workspace = true, features = ["rt-multi-thread"] }
mockd.workspace = true
itertools.workspace = true
rand.workspace = true
wiremock.workspace = true
serde_json.workspace = true
hex.workspace = true
