# SPDX-FileCopyrightText: 2022 jerusdp
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "test-suite-trace"
version = "3.1.1"
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
trace = []

[dependencies]

[dev-dependencies]
chrono.workspace = true
claims.workspace = true
env_logger.workspace = true
hex.workspace = true
hcaptcha = { path = "../hcaptcha", features = ["trace", "enterprise"] }
hcaptcha_derive = { path = "../hcaptcha_derive" }
itertools.workspace = true
mockd.workspace = true
rand.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
trybuild.workspace = true
wiremock.workspace = true
