# SPDX-FileCopyrightText: 2025 jerusdp
#
# SPDX-License-Identifier: MIT OR Apache-2.0
[workspace]

[package]
name = "hcaptcha-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.12"
serde_json = "1.0.149"
hcaptcha = { path = ".." }

[[bin]]
name = "response_parse"
path = "fuzz_targets/response_parse.rs"
test = false
doc = false
bench = false
