[package]
name = "hcaptcha-wasm"
version = "0.1.0"
authors = ["Jeremiah Russell <jerry@jrussell.ie>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# [features]
# default = ["console_error_panic_hook"]

[dependencies]
claims = "0.7.1"
hcaptcha = { path = "../../", features = ["enterprise"] }
hcaptcha_derive = { path = "../../../hcaptcha_derive" }
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.34"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
# console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

# [profile.release]
# # Tell `rustc` to optimize for small code size.
# opt-level = "s"
